--- a/src/Zipkin.Tracer.Kafka/Zipkin.Tracer.Kafka.csproj
+++ b/src/Zipkin.Tracer.Kafka/Zipkin.Tracer.Kafka.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4BB262E2-3927-4E75-952A-F0CF8DDB36B9}</ProjectGuid>
+    <ProjectGuid>{BB1C4B54-9638-40CB-A785-6228B391E621}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Zipkin.Tracer</RootNamespace>
-    <AssemblyName>Zipkin.Tracer</AssemblyName>
+    <RootNamespace>Zipkin.Tracer.Kafka</RootNamespace>
+    <AssemblyName>Zipkin.Tracer.Kafka</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -36,35 +36,18 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="Thrift, Version=0.9.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\ApacheThrift.0.9.3\lib\Thrift.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Annotation.cs" />
-    <Compile Include="Annotations.cs" />
-    <Compile Include="AnnotationType.cs" />
-    <Compile Include="BinaryAnnotation.cs" />
-    <Compile Include="AnnotationConstants.cs" />
-    <Compile Include="DebugCollector.cs" />
-    <Compile Include="Thrift\Annotation.cs" />
-    <Compile Include="Thrift\BinaryAnnotation.cs" />
-    <Compile Include="Thrift\Endpoint.cs" />
-    <Compile Include="Thrift\Span.cs" />
-    <Compile Include="Thrift\ThriftSpanSerializer.cs" />
-    <Compile Include="Thrift\ThriftExtensions.cs" />
-    <Compile Include="Span.cs" />
-    <Compile Include="ISpanCollector.cs" />
-    <Compile Include="HttpCollector.cs" />
+    <Compile Include="KafkaCollector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TraceHeader.cs" />
-    <Compile Include="ZipkinCollectorException.cs" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <None Include="packages.config" />
+    <ProjectReference Include="..\Zipkin.Tracer\Zipkin.Tracer.csproj">
+      <Project>{4bb262e2-3927-4e75-952a-f0cf8ddb36b9}</Project>
+      <Name>Zipkin.Tracer</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
