added fake builds

--- a/src/Zipkin.Tracer/Zipkin.Tracer.csproj
+++ b/src/Zipkin.Tracer/Zipkin.Tracer.csproj
@@ -65,6 +65,7 @@
   <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Zipkin.Tracer.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
