--- a/src/Zipkin.Tracer.Kafka/Zipkin.Tracer.Kafka.csproj
+++ b/src/Zipkin.Tracer.Kafka/Zipkin.Tracer.Kafka.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Zipkin.Tracer.Kafka.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
