--- a/tests/Zipkin.Core.Tests/Zipkin.Core.Tests.csproj
+++ b/tests/Zipkin.Core.Tests/Zipkin.Core.Tests.csproj
@@ -64,9 +64,9 @@
     <Compile Include="SpanTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Zipkin.Tracer\Zipkin.Tracer.csproj">
+    <ProjectReference Include="..\..\src\Zipkin.Core\Zipkin.Core.csproj">
       <Project>{4bb262e2-3927-4e75-952a-f0cf8ddb36b9}</Project>
-      <Name>Zipkin.Tracer</Name>
+      <Name>Zipkin.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
