--- a/src/Zipkin.Core/Zipkin.Core.nuspec
+++ b/src/Zipkin.Core/Zipkin.Core.nuspec
@@ -2,14 +2,15 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>Zipkin.Core</id>
+    <title>$title$</title>
     <version>$version$</version>
     <authors>$author$</authors>
     <owners>$author$</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <licenseUrl>https://github.com/openzipkin/zipkin-csharp/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/openzipkin/zipkin-csharp</projectUrl>
-    <description>$title$</description>
-    <summary>$title$</summary>
+    <description>$description$</description>
+    <summary>$description$</summary>
     <releaseNotes>Nuget package</releaseNotes>
     <copyright>Openzipkin 2017</copyright>
     <tags>zipkin tracing distributed performance</tags>
