--- a/examples/ZipkinExample/ZipkinExample.csproj
+++ b/examples/ZipkinExample/ZipkinExample.csproj
@@ -49,11 +49,11 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Zipkin.Collector.Kafka\Zipkin.Collector.Kafka.csproj">
+    <ProjectReference Include="..\..\src\.NET Classic\Zipkin.Collector.Kafka\Zipkin.Collector.Kafka.csproj">
       <Project>{bb1c4b54-9638-40cb-a785-6228b391e621}</Project>
       <Name>Zipkin.Collector.Kafka</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\src\Zipkin.Core\Zipkin.Core.csproj">
+    <ProjectReference Include="..\..\src\.NET Classic\Zipkin.Core\Zipkin.Core.csproj">
       <Project>{4bb262e2-3927-4e75-952a-f0cf8ddb36b9}</Project>
       <Name>Zipkin.Core</Name>
     </ProjectReference>
