Add apache-thrift-netcore dependency

--- a/src/.NET Core/Zipkin.Core/Zipkin.Core.csproj
+++ b/src/.NET Core/Zipkin.Core/Zipkin.Core.csproj
@@ -1,7 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.4</TargetFramework>
+    <TargetFramework>netstandard1.5</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="apache-thrift-netcore" Version="0.9.3" />
+  </ItemGroup>
 
 </Project>
