--- a/src/.NET Core/Zipkin.Collector.Kafka/Zipkin.Collector.Kafka.csproj
+++ b/src/.NET Core/Zipkin.Collector.Kafka/Zipkin.Collector.Kafka.csproj
@@ -1,7 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.4</TargetFramework>
+    <TargetFramework>netstandard1.5</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Zipkin.Core\Zipkin.Core.csproj" />
+  </ItemGroup>
 
 </Project>
