--- a/src/.NET Core/Zipkin.Collector.Kafka/Zipkin.Collector.Kafka.csproj
+++ b/src/.NET Core/Zipkin.Collector.Kafka/Zipkin.Collector.Kafka.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\Zipkin.Core\Zipkin.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="NETStandard.Library" Version="1.6.1" />
+  </ItemGroup>
+
 </Project>
