--- a/src/.NET Classic/Zipkin.Collector.Kafka/Zipkin.Collector.Kafka.csproj
+++ b/src/.NET Classic/Zipkin.Collector.Kafka/Zipkin.Collector.Kafka.csproj
@@ -31,7 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="kafka-net, Version=0.9.0.65, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\kafka-net.0.9.0.65\lib\net45\kafka-net.dll</HintPath>
+      <HintPath>..\..\..\packages\kafka-net.0.9.0.65\lib\net45\kafka-net.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -62,7 +62,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Zipkin.Collector.Kafka.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
