--- a/src/Zipkin.Core/Zipkin.Core.csproj
+++ b/src/Zipkin.Core/Zipkin.Core.csproj
@@ -1,81 +1,29 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4BB262E2-3927-4E75-952A-F0CF8DDB36B9}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Zipkin.Core</RootNamespace>
-    <AssemblyName>Zipkin.Core</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
+    <AssemblyTitle>Zipkin.Core</AssemblyTitle>
+    <Description>A minimalistic .NET client library for Twitter Zipkin tracing.</Description>
+    <Copyright>Copyright 2017 Openzipkin</Copyright>
+    <VersionPrefix>0.2.0</VersionPrefix>
+    <VersionSuffix>beta</VersionSuffix>
+    <Authors>OpenZipkin Developers</Authors>
+    <TargetFrameworks>net45;netstandard1.5</TargetFrameworks>
+    <PackageTags>zipkin;tracing;distributed;performance</PackageTags>
+    <PackageProjectUrl>https://github.com/openzipkin/zipkin-csharp</PackageProjectUrl>
+    <PackageLicenseUrl>https://github.com/openzipkin/zipkin-csharp/blob/master/LICENSE</PackageLicenseUrl>
+    <NetStandardImplicitPackageVersion Condition=" '$(TargetFramework)' == 'netstandard1.5' ">1.6.1</NetStandardImplicitPackageVersion>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+
+  <ItemGroup>
+    <PackageReference Include="apache-thrift-netcore" Version="0.9.3" />
+  </ItemGroup>
+
+  <PropertyGroup Condition=" '$(TargetFramework)' == 'net45' ">
+    <DefineConstants>$(DefineConstants);SERIALIZATION</DefineConstants>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+
+  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+    <DefineConstants>$(DefineConstants);RELEASE</DefineConstants>
   </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-    <Reference Include="Thrift, Version=0.9.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\ApacheThrift.0.9.3\lib\Thrift.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="..\CommonAssemblyInfo.cs">
-      <Link>Properties\CommonAssemblyInfo.cs</Link>
-    </Compile>
-    <Compile Include="Annotation.cs" />
-    <Compile Include="Annotations.cs" />
-    <Compile Include="AnnotationType.cs" />
-    <Compile Include="BinaryAnnotation.cs" />
-    <Compile Include="AnnotationConstants.cs" />
-    <Compile Include="DebugCollector.cs" />
-    <Compile Include="Thrift\Annotation.cs" />
-    <Compile Include="Thrift\BinaryAnnotation.cs" />
-    <Compile Include="Thrift\Endpoint.cs" />
-    <Compile Include="Thrift\Span.cs" />
-    <Compile Include="Thrift\ThriftSpanSerializer.cs" />
-    <Compile Include="Thrift\ThriftExtensions.cs" />
-    <Compile Include="Span.cs" />
-    <Compile Include="ISpanCollector.cs" />
-    <Compile Include="HttpCollector.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TraceHeader.cs" />
-    <Compile Include="ZipkinCollectorException.cs" />
-  </ItemGroup>
-  <ItemGroup />
-  <ItemGroup>
-    <None Include="packages.config" />
-    <None Include="Zipkin.Core.nuspec" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
